# sphinx-starter-pack

./: pyproject.toml
canonical_sphinx/: __init__.py  config.py
canonical_sphinx/theme/: __init__.py
sphinx_starter_pack/: __init__.py  extension.py
