[project]
name = "canonical-sphinx"
dependencies = [

]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "build",
    "coverage[toml]==7.3.2",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
]
lint = [
    "black==23.10.0",
    "codespell[toml]==2.2.6",
    "ruff==0.1.1",
    "yamllint==1.32.0"
]
types = [
    "mypy[reports]==1.6.1",
    "pyright==1.1.332",
]
docs = [
    "furo==2023.9.10",
    "sphinx>=7.1.2,<8",
    "sphinx-autobuild==2021.3.14",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.5.0",
    "sphinx-pydantic==0.1.1",
    "sphinx-toolbox==3.5.0",
    "sphinx-lint==0.8.1",
]

[build-system]
requires = [
    "setuptools==67.7.2",
    "setuptools_scm[toml]>=7.1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["canonical_sphinx**"]
namespaces = false

[project.entry-points."sphinx.html_themes"]
canonical_sphinx_theme = "canonical_sphinx.theme"
